gateway-expr/cert-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway-cert
  annotations:
    cert-manager.io/cluster-issuer: cloud-dns-issuer
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http
      hostname: test.svc.staging.fithubdev.com
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: test-tls
