gateway-expr/external-gateway.yaml
# kind: Gateway
# apiVersion: gateway.networking.k8s.io/v1beta1
# metadata:
#   name: external-http
#   annotations:
#     networking.gke.io/certmap: gke-stag-map
# spec:
#   gatewayClassName: gke-l7-global-external-managed
#   listeners:
#   - name: https
#     protocol: HTTPS
#     port: 443

kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-https
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "test.svc.staging.fithubdev.com"
    allowedRoutes:
      namespaces:
        from: "All"
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "test.svc.staging.fithubdev.com"
    allowedRoutes:
      namespaces:
        from: "All"
    tls:
      mode: Terminate
      certificateRefs:
      - name: test-ssl
        kind: Secret
        group: ""
