gateway-expr/gateway.yaml
# kind: Gateway
# apiVersion: gateway.networking.k8s.io/v1beta1
# metadata:
#   name: internal-http
#   namespaces: gateway-infra
# spec:
#   gatewayClassName: gke-l7-rilb
#   listeners:
#   - name: http
#     protocol: HTTP
#     hostname: "test.svc.staging.fithubdev.com"
#     port: 80
#     allowedRoutes:
#       namespaces:
#         from: "All"

kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: internal-http
  namespace: gateway-infra
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
  - name: http
    protocol: HTTP
    hostname: "test.svc.staging.fithubdev.com"
    port: 80
    allowedRoutes:
      namespaces:
        from: "All"
