gateway-expr/store-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: store
  namespace: test-app
spec:
  parentRefs:
  - kind: Gateway
    name: internal-http
    namespace: gateway-infra
  hostnames:
  - "test.svc.staging.fithubdev.com"
  rules:
  - backendRefs:
    - name: store-v1
      port: 8080
  - matches:
    - headers:
      - name: env
        value: canary
    backendRefs:
    - name: store-v2
      port: 8080
  - matches:
    - path:
        value: /de
    backendRefs:
    - name: store-german
      port: 8080
